# tldw_tui

./: .gitignore  CONTRIBUTING.md  Developer_Guide.md  LICENSE  README.md  SUGGESTIONS.MD  ToDo.md  app.py  config.toml  config.toml.bak  config.txt  pyproject.toml  requirements.txt  run.py  tldw_cli.css
.github/workflows/: python-app.yml
Docs/: FAQs.md  GOAL.md  LLM_FAQs.md  Testing.md
Docs/Design/: Architecture_and_Design.md  Chat_Page.md  Coding_Tab.md  Packaging.md  TUIs.md  User_Settings.md
Helper_Scripts/Prompts/: Ingest_Prompts.py
Helper_Scripts/Prompts/Assistants/: General.md
Libs/: LLM_API_Calls.py  LLM_API_Calls_Local.py  Utils.py
STests/Sync/: test_sync_client-2.py  test_sync_client.py  test_sync_server.py
Tests/ChaChaNotesDB/: test_chachanotes_db.py  test_chachanotes_db_properties.py
Tests/Character_Chat/: test_character_chat.py
Tests/Chat/: test_chat_completions_integration.py  test_chat_endpoint.py  test_chat_features.py  test_chat_functions.py  test_chat_integration_APIs.py  test_chat_request_schemas.py  test_chat_sidebar_media_search.py  test_prompt_template_manager.py
Tests/DB/: conftest.py  test_sqlite_db.py
Tests/Event_Handlers/Chat_Events/: test_chat_events.py  test_chat_events_sidebar.py  test_chat_streaming_events.py
Tests/LLM_Management/: test_llm_management_events.py  test_mlx_lm.py
Tests/MediaDB2/: conftest.py  test_sqlite_db.py
Tests/Media_DB/: test_media_db_properties.py  test_media_db_v2.py  test_sqlite_db.py  test_sync_client.py
Tests/Notes/: conftest.py  test_notes_api_integration.py  test_notes_library_unit.py
Tests/Prompts_DB/: tests_prompts_db.py  tests_prompts_db_properties.py
Tests/Screens/: test_metrics_screen.py
Tests/UI/: test_ingest_window.py  test_tools_settings_window.py
css/: tldw_cli.tcss
tests/DB/: test_sync_client.py
tests/Sync/: test_sync_client-2.py
tldw_app/: Constants.py  Logging_Config.py  app-backup.py  app.py  config.py
tldw_app/Character_Chat/: Character_Chat_Lib.py
tldw_app/Chat/: Chat_Functions.py  chat_request_schemas.py
tldw_app/Chunking/: Chunk_Lib.py
tldw_app/DB/: ChaChaNotes_DB.py  Client_Media_DB_v2.py  Media_DB.py  Prompts_DB.py  Sync_Client.py
tldw_app/Event_Handlers/: app_lifecycle.py  chat_events.py  conv_char_events.py  notes_events.py  sidebar_events.py  tab_events.py  worker_events.py
tldw_app/LLM_Calls/: LLM_API_Calls.py  LLM_API_Calls_Local.py  Local_Summarization_Lib.py  Summarization_General_Lib.py
tldw_app/Metrics/: metrics_logger.py
tldw_app/Notes/: Bi-Directional-File-Sync.md  Notes_Library.py
tldw_app/Prompt_Management/: Prompt_Engineering.py  Prompts_Interop.py
tldw_app/Screens/: Metrics_Screen.py  Stats_screen.py
tldw_app/Tools/repo2txt/: Convo.md
tldw_app/UI/: Logs_Window.py  Notes_Window.py
tldw_app/Utils/: Emoji_Handling.py  Utils.py  paths.py  text.py
tldw_app/Web_Scraping/: WebSearch_APIs.py
tldw_app/Widgets/: character_sidebar.py  chat_message.py  custom_list_items.py  notes_sidebar_left.py  settings_sidebar.py  titlebar.py
tldw_app/api/: LLM_API_Calls.py  LLM_API_Calls_Local.py
tldw_app/css/: default_css.py  tldw_cli.tcss
tldw_app/utils/: Utils.py  paths.py
tldw_chatbook/: Constants.py  Logging_Config.py  app-backup.py  app.py  config.py
tldw_chatbook/Character_Chat/: Character_Chat_Lib.py
tldw_chatbook/Chat/: Chat_Deps.py  Chat_Functions.py  prompt_template_manager.py
tldw_chatbook/Chunking/: Chunk_Lib.py
tldw_chatbook/Coding/: code_mapper.py
tldw_chatbook/DB/: ChaChaNotes_DB.py  Client_Media_DB_v2.py  Prompts_DB.py  Sync_Client.py
tldw_chatbook/Embeddings/: Chroma_Lib.py  Embeddings_Lib.py
tldw_chatbook/Event_Handlers/: app_lifecycle.py  chat_events.py  conv_char_events.py  ingest_events.py  llm_management_events.py  llm_management_events_ollama.py  llm_management_events_vllm.py  llm_nav_events.py  media_events.py  notes_events.py  sidebar_events.py  tab_events.py  worker_events.py
tldw_chatbook/Event_Handlers/Chat_Events/: chat_events.py  chat_events_sidebar.py  chat_streaming_events.py
tldw_chatbook/Event_Handlers/LLM_Management_Events/: llm_management_events.py  llm_management_events_mlx_lm.py  llm_management_events_ollama.py  llm_management_events_onnx.py  llm_management_events_transformers.py  llm_management_events_vllm.py
tldw_chatbook/Event_Handlers/llm_management_events/: llm_management_events.py  llm_management_events_ollama.py  llm_management_events_vllm.py
tldw_chatbook/LLM_Calls/: LLM_API_Calls.py  LLM_API_Calls_Local.py  Local_Summarization_Lib.py  README.md  Summarization_General_Lib.py
tldw_chatbook/Local_Inference/: mlx_lm_inference_local.py  ollama_model_mgmt.py
tldw_chatbook/Metrics/: Otel_Metrics.py  logger_config.py  metrics.py  metrics_logger.py
tldw_chatbook/Notes/: Notes_Library.py
tldw_chatbook/Prompt_Management/: Prompts_Interop.py
tldw_chatbook/RAG_Search/: Unified_RAG_v2.py
tldw_chatbook/Screens/: Stats_screen.py
tldw_chatbook/Tools/Mind_Map/: anytree-demo.py
tldw_chatbook/UI/: Chat_Window.py  Coding_Window.py  Conv_Char_Window.py  Evals_Window.py  Ingest_Window.py  LLM_Management_Window.py  Logs_Window.py  MediaWindow.py  Notes_Window.py  SearchWindow.py  Stats_Window.py  Tab_Bar.py  Tools_Settings_Window.py
tldw_chatbook/Utils/: Emoji_Handling.py  Splash.py  Utils.py  paths.py  text.py
tldw_chatbook/Web_Scraping/: Article_Extractor_Lib.py  WebSearch_APIs.py
tldw_chatbook/Web_Scraping/Article_Scraper/: config.py  crawler.py  importers.py  main.py  processors.py  scraper.py  utils.py
tldw_chatbook/Web_Scraping/cookie_scraping/: cookie_cloner.py
tldw_chatbook/Widgets/: AppFooterStatus.py  Evals_Sidebar.py  character_sidebar.py  chat_message.py  chat_right_sidebar.py  emoji_picker.py  notes_sidebar_left.py  notes_sidebar_right.py  settings_sidebar.py  titlebar.py
tldw_chatbook/css/: tldw_cli.tcss
tldw_chatbook/css/Themes/: theme_tester.py  theme_tester.tcss  themes.py
tldw_chatbook/tldw_api/: LICENSE  README.md  __init__.py  client.py  exceptions.py  schemas.py  utils.py
