
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tldw_chatbook" # This is the distribution name (what you pip install)
version = "0.1.0"
authors = [
  { name="Robert Musser", email="contact@rmusser.net" },
]
description = "A Textual TUI for chatting with LLMs, and interacting with the tldw server."
readme = "README.md" # Assumes README.md is in the project root
requires-python = ">=3.11"
license = { file="LICENSE" } # Assumes LICENSE file is in the project root
keywords = ["tui", "cli", "llm", "textual", "ai", "chat"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Utilities",
    "Topic :: Terminals",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)", # Corrected to AGPL
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    # "Programming Language :: Python :: 3.13", # Only list if you actively test/support it
    "Environment :: Console",
    "Operating System :: OS Independent",
]

# --- Dependencies ---
dependencies = [
    "chardet",
    "httpx",
    "loguru",
    "textual>=3.3.0", # Specify a minimum Textual version if features depend on it
    "requests",
     "rich", # Usually pulled in by Textual, but explicit is fine
    "Pillow",
    "PyYAML",
    "pydantic",
    "psutil",
    # "toml", # Only if writing TOML. For reading in Python 3.11+, tomllib is built-in.
]

# --- Optional Dependencies ---
[project.optional-dependencies]
vllm = ["vllm"]
mlx = ["mlx-lm"]
transformers = ["transformers"]
# For groups like local_ingestion, local_rag, etc., if they have actual packages:
# local_ingestion = ["some-ingestion-package"]
# local_rag = ["some-rag-package"]
dev = [ # Example for development dependencies
    "pytest",
    "textual-dev", # For Textual development tools
]


[project.urls]
"Homepage" = "https://github.com/rmusser01/tldw_chatbook"
"Bug Tracker" = "https://github.com/rmusser01/tldw_chatbook/issues"

# This creates a command-line script called 'tldw-cli'
[project.scripts]
# Points to the main function in your tldw_chatbook package's app module.
# Structure: project_root/tldw_chatbook/app.py, function main_cli_runner
tldw-cli = "tldw_chatbook.app:main_cli_runner"

[tool.setuptools.packages.find]
where = ["."]  # Look for packages in the current directory (where pyproject.toml is)
# Include the 'tldw_chatbook' package and its submodules
include = ["tldw_chatbook*"]
exclude = ["Tests*", ".venv*"]

[tool.setuptools.package-data]
# Include .tcss files in the tldw_chatbook.css package/submodule
# This assumes your CSS is in project_root/tldw_chatbook/css/*.tcss
"tldw_chatbook.css" = ["*.tcss"]
# If you have other assets inside your tldw_chatbook package (e.g., tldw_chatbook/assets/), add them here:
# "tldw_chatbook.assets" = ["*"]

[pytest] # This section is fine if you use pytest
markers = [
 "unit: marks tests as unit tests",
]