
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tldw_chatbook"
version = "0.1.0"
authors = [
  { name="Robert Musser", email="contact@rmusser.net" },
]
description = "A Textual TUI for chatting with LLMs, and interacting with the tldw server."
readme = "README.md"
requires-python = ">=3.11"
license = { file="LICENSE" }
keywords = ["tui", "cli", "llm", "textual", "ai", "chat"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Utilities",
    "Topic :: Terminals",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Environment :: Console",
    "Operating System :: OS Independent",
]

# --- Dependencies ---
dependencies = [
    "chardet",
    "httpx",
    "loguru",
    "textual>=3.3.0",
    "requests",
    "rich",
    "pillow",
    "PyYAML",
    "pydantic",
    "psutil",
    "toml",
]

# --- Optional Dependencies ---
[project.optional-dependencies]
chunker = [
    "langdetect",
    "nltk",
    "scikit-learn",
    "fugashi",
    "transformers",
    "tqdm",
    "jieba",
]
embeddings_rag = [
    "torch",
    "numpy",
    "pydantic",
    "transformers",
]
websearch = [
    "lxml",
    "bs4",#beautifulsoup
    "pandas",
    "playwright",
    #"playwright_stealth",
    "trafilatura",
    "langdetect",
    "nltk",
    "scikit-learn",
]
local_vllm = ["vllm"]
local_mlx = ["mlx-lm"]
local_transformers = ["transformers"]
dev = [ # Example for development dependencies
    "pytest",
    "textual-dev", # For Textual development tools
    "hypothesis",
    "pytest_asyncio",
]


[project.urls]
"Homepage" = "https://github.com/rmusser01/tldw_chatbook"
"Bug Tracker" = "https://github.com/rmusser01/tldw_chatbook/issues"

# This creates a command-line script called 'tldw-cli'
[project.scripts]
# Points to the main function in your tldw_chatbook package's app module.
# Structure: project_root/tldw_chatbook/app.py, function main_cli_runner
tldw-cli = "tldw_chatbook.app:main_cli_runner"

[tool.setuptools.packages.find]
where = ["."]  # Look for packages in the current directory (where pyproject.toml is)
# Include the 'tldw_chatbook' package and its submodules
include = ["tldw_chatbook*"]
exclude = ["Tests*", ".venv*"]

[tool.setuptools.package-data]
# Include .tcss files in the tldw_chatbook.css package/submodule
# This assumes your CSS is in project_root/tldw_chatbook/css/*.tcss
"tldw_chatbook.css" = ["*.tcss"]
# If you have other assets inside your tldw_chatbook package (e.g., tldw_chatbook/assets/), add them here:
# "tldw_chatbook.assets" = ["*"]

[pytest] # This section is fine if you use pytest
markers = [
 "unit: marks tests as unit tests",
]